# password-manager-gui

./: .gitignore  App.py  README.md  app.py  handlers.py  main.py  passwords.json  pyproject.toml  todo.txt  window.py
dpg_classes/: Popup.py  Window.py  base.py  containers.py  items.py
graphs/: handlers.dot  start.dot  window_structure.dot
handlers/: form.py  log_in.py  table.py
handlers/menubar/: about.py  file.py
utils/: App.py  AppMenuBar.py  AppWindow.py  Popups.py  handlers.py  menu_bar_handlers.py
