[tool.poetry]
name = "password-manager-gui"
version = "0.1.3"
description = "A password manager with GUI. Uses python cryptography module [NAME WHAT ENCRYPTION I USE]"
authors = ["fahlerile"]
license = "MIT"
readme = "README.md"
packages = [{include = "password_manager_gui"}]

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.9.1"
pandas = "^2.0.2"
xkcdpass = "^1.19.3"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
