[project]
name = "wordman"
version = "0.2.2"
description = "A GUI password manager"
authors = [
    {name = "Kirill Trofimov",email = "kitrofimov39@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui (>=2.1.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
xkcdpass = "^1.20.0"
pyperclip = "^1.9.0"
ruff = "^0.12.4"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
